# metaboard-cli

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: deploy.rs  metaboard.rs  mod.rs  query.rs  test.rs  wait.rs
src/cli/query/: metaboard.rs  metav1.rs
src/subgraph/: mod.rs
src/subgraph/deploy/: mod.rs
src/subgraph/metaboard/: metaboard.graphql  mod.rs
src/subgraph/query/: mod.rs  schema.json
src/subgraph/query/metaboard/: metaboard.graphql  mod.rs
src/subgraph/query/metav1/: mod.rs  query.graphql
src/subgraph/wait/: mod.rs
