[package]
name = "metaboard-cli"
version = "0.1.0"
edition = "2021"
license = "CAL-1.0"
description = "metaboard subgraph CLI."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.5", features = ["cargo", "derive"] }
ethabi = "18.0.0"
graphql_client = "0.12.0"
hex = "0.4.3"
mustache = "0.9.0"
once_cell = "1.17.1"
reqwest = { version = "0.11.17", features = ["json"] }
rust-bigint = "1.2.0"
serde = "1.0.160"
serde_bytes = "0.11.9"
serde_json = "1.0.99"
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
